5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1668_2966.log
== TEST (2019-04-15 19:05:58) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?")
mulher = S 
valor_final = ingresso * quantidade
valor_final_mulher = (ingresso * 20 / 100) * quantidade
if ()
-- ERROR:
File "XXXX", line 7
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:07:52) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?")
mulher = S 
valor_final = ingresso * quantidade
valor_final_mulher = (ingresso * 20 / 100) * quantidade
if ("mulher = S"):
	print(valor_final_mulher)
else:
	print(valor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:27) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
valor_final = ingresso * quantidade
valor_final_mulher = (ingresso * 20 / 100) * quantidade
if ("mulher = S"):
	print(valor_final_mulher)
else:
	print(valor_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:19) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_final = ingresso * quantidade
valor_final_mulher = desconto * quantidade
if ("mulher = S"):
	print(round(valor_final_mulher, 2))
else:
	print(round(valor_final, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:14:44) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_final = ingresso * quantidade
valor_final_mulher = desconto * quantidade
if ("mulher = S"):
	print(round(valor_final_mulher, 2))
else:
	print(round(valor_final, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:15:04) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_final = ingresso * quantidade
valor_final_mulher = desconto * quantidade
if ("mulher = S"):
	print(round(valor_final_mulher, 2))
else:
	print(round(valor_final, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:18:05) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_final = ingresso * quantidade
valor_final_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_final_mulher, 2))
else:
	print(round(valor_final, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:18:15) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_final = ingresso * quantidade
valor_final_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_final_mulher, 2))
else:
	print(round(valor_final, 2))
-- EXECUTION TIME:
0.187847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:19:13) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_final = ingresso * quantidade
valor_final_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_final_mulher, 2))
else:
	print(round(valor_final, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:19:49) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_1 = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_1, 2))
-- EXECUTION TIME:
0.138727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:19:49) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_1 = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:34) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_1 = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor_1, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:28) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_1 = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else("mulher = N")
	print(round(valor_1, 2))
-- ERROR:
File "XXXX", line 9
    else("mulher = N")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:36) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor_1 = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else("mulher = N"):
	print(round(valor_1, 2))
-- ERROR:
File "XXXX", line 9
    else("mulher = N"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:29) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
valor = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else:
	print(round(valor, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:20) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
desconto = ingresso * 20 / 100
resultado = ingresso * quantidade
valor_mulher = (ingresso - desconto) * quantidade
if ("mulher = S"):
	print(round(valor_mulher, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:01) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if ("mulher = S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:09) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if ("mulher = S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:30:11) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if ("mulher = S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.200538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:16) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if ("mulher = S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:30:33) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher = S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.281058
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 5
    if (mulher = S):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:37) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher = S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
File "XXXX", line 5
    if (mulher = S):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:07) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher = "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.145271
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 5
    if (mulher = "S"):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:07) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher = "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
File "XXXX", line 5
    if (mulher = "S"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:18) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:19) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.137798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:20) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:31:38) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:22) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher = S):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
File "XXXX", line 5
    if (mulher = S):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:25) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher = "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
File "XXXX", line 5
    if (mulher = "S"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:54) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:02) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:10) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.207523
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:13) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.140813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:14) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.302611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:14) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.242232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'N'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:14) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.355008
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1668/2966/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:53) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.149446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:03) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:36:15) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.206726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:37:19) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.269947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:37:20) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.199013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:37:20) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.260391
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:37:20) 
-- CODE:
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
mulher = input("S ou N ?") 
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.172124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 1, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'N'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:14) 
-- CODE:
mulher = input("S OU N ?") 
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- OUTPUT:
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:38:24) 
-- CODE:
mulher = input("S OU N ?") 
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.197801
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:45:06) 
-- CODE:
mulher = input("S OU N ?") 
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.208771
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:45:37) 
-- CODE:
mulher = input("S OU N ?") 
ingresso = float(input("valor do ingresso? "))
quantidade = int(input("quantos voce deseja? "))
resultado = ingresso * quantidade
if (mulher == "S"):
	print(round(resultado * 0.8, 2))
else:
	print(round(resultado, 2))
-- EXECUTION TIME:
0.176107
-- TEST CASE 1:
---- input:
S
37.50
6
---- correct output:
180
---- user output:
180.0
-- TEST CASE 2:
---- input:
S
26.95
8
---- correct output:
172.48
---- user output:
172.48
-- TEST CASE 3:
---- input:
N
42.45
3
---- correct output:
127.35
---- user output:
127.35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
